# torappu

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  ResourceManifest.fbs  package.json  pnpm-lock.yaml  pyproject.toml
.github/: renovate.json
.github/workflows/: deploy.yml  pyright.yml  ruff.yml  submodule.yml
assets/: ResourceManifest.fbs
docker/: gunicorn_conf.py
patches/UnityPy/files/: BundleFile.py
patches/UnityPy/helpers/: CompressionHelper.py
scripts/: fix_spine.py  unpack_act2vmulti_mappreview.py  unpack_full_mappreview.py
scripts/data/: map_preview_list.txt
torappu/: __init__.py  __main__.py  client.py  config.py  consts.py  log.py  logger.py  main.py  models.py  utils.py
torappu/cli/: __init__.py  __main__.py  utils.py
torappu/core/: __init__.py  __main__.py  client.py  game_server.py  main.py  utils.py  wiki.py
torappu/core/task/: __init__.py  audio.py  base.py  build_skill.py  camplogo.py  char_arts.py  char_avatar.py  char_portrait.py  char_spine.py  elite_icon.py  enemy_icon.py  enemy_spine.py  furniture_icon.py  furniture_preview.py  furniture_theme.py  gamedata.py  item_demand.py  item_icon.py  logo.py  map_preview.py  medal_diy.py  medal_icon.py  mixstory.py  player_avatar.py  potential_icon.py  profession_large_icon.py  rarity_icon.py  roguelike_topic_itempic.py  skill.py  specialized_icon.py  subprofession_icon.py  task.py  uniequip_direction.py  uniequip_extratype.py  uniequip_img.py  uniequip_type.py  utils.py
torappu/core/wiki/: __init__.py  core.py  exception.py  response.py  typing.py  wiki.py
torappu/server/: __init__.py  __main__.py  main.py
torappu/task/: base.py  gamedata.py
torappu/utils/: utils.py
