[tool.poetry]
name = "torappu"
version = "1.10.1"
description = "unpacker for a game"
authors = [
  "daflyinbed <1677759063@qq.com>",
  "StarHeartHunt <starheart233@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bson = "^0.5.10"
click = "^8.1.7"
pydub = "^0.25.1"
cashews = "^6.2.0"
unitypy = "^1.10.1"
tenacity = "^8.2.2"
apscheduler = "^3.10.1"
pycryptodome = "^3.18.0"
httpx = ">=0.24.1,<1.0.0"
loguru = ">=0.7.0,<1.0.0"
fastapi = ">=0.103.0,<1.0.0"
pydantic-settings = "^2.0.0"
sentry-sdk = { version = "^1.28.1", extras = ["loguru", "httpx", "fastapi"] }

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
isort = "^5.10.1"
black = "^23.1.0"
pre-commit = "^3.3.3"

[tool.poetry.group.deploy.dependencies]
gunicorn = "^21.1.0"
uvicorn = { version = ">=0.20.0,<1.0.0", extras = ["standard"] }

[tool.black]
preview = true
target-version = ["py311", "py312"]
line-length = 88
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = "typing_extensions"

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

line-length = 88
target-version = "py311"

[tool.ruff.extend-per-file-ignores]
"./scripts/*" = ["T201"]
"./docker/*" = ["T201"]

[tool.pyright]
extraPaths = ["./"]
pythonVersion = "3.11"
pythonPlatform = "All"
executionEnvironments = [{ root = "./" }]

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
