[tool.poetry]
name = "torappu"
version = "1.16.6"
description = "unpacker for a game"
authors = [
  "daflyinbed <1677759063@qq.com>",
  "StarHeartHunt <starheart233@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bson = "^0.5.10"
click = "^8.1.7"
pydub = "^0.25.1"
unitypy = "^1.10.1"
tenacity = "^8.2.2"
apscheduler = "^3.10.1"
pycryptodome = "^3.18.0"
httpx = ">=0.24.1,<1.0.0"
loguru = ">=0.7.0,<1.0.0"
fastapi = ">=0.103.0,<1.0.0"
pydantic-settings = "^2.0.0"
sentry-sdk = { version = "^1.45.0", extras = ["loguru", "httpx", "fastapi"] }

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
isort = "^5.10.1"
black = "^24.2.0"
pre-commit = "^3.3.3"

[tool.poetry.group.deploy.dependencies]
gunicorn = "^22.0.0"
uvicorn = { version = ">=0.20.0,<1.0.0", extras = ["standard"] }

[tool.black]
preview = true
target-version = ["py311", "py312"]
line-length = 88
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = "typing_extensions"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.extend-per-file-ignores]
"./scripts/*" = ["T201"]
"./docker/*" = ["T201"]

[tool.pyright]
extraPaths = ["./"]
pythonVersion = "3.11"
pythonPlatform = "All"
executionEnvironments = [{ root = "./" }]

typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
